add early november application

--- a/lib/pelable_web/templates/page/landing.html.eex
+++ b/lib/pelable_web/templates/page/landing.html.eex
@@ -215,7 +215,7 @@ s0.parentNode.insertBefore(s1,s0);
 										<div class="accordion-icon"></div>
 									</div>
 									<div class="accordion-body">
-										<p> The next batch is scheduled to start the first day of November and ends on the 13th of December </p>
+										<p> The next batch is scheduled to start the first day of November and ends on the 13th of December. Apply <a href="https://forms.gle/dus9GnYWRfa3tWeSA"> here </a> </p>
 									</div>
 								</li>
 
