--- a/lib/pelable_web/templates/page/landing.html.eex
+++ b/lib/pelable_web/templates/page/landing.html.eex
@@ -215,7 +215,7 @@ s0.parentNode.insertBefore(s1,s0);
 										<div class="accordion-icon"></div>
 									</div>
 									<div class="accordion-body">
-										<p> No, we are not. We're a peer-to-peer learning program. Unlike an internship: </p>
+										<p> No, we are not. We are a peer-to-peer learning program. Unlike an internship: </p>
                                         <ul>
                                         <li> You won't be working for a company</li>
                                         <li> You have the freedom to choose the project you work on and all of your team members are your peers </li>
