--- a/lib/pelable_web/templates/chatroom/show.html.eex
+++ b/lib/pelable_web/templates/chatroom/show.html.eex
@@ -1,20 +1,6 @@
-<script src="<%= Routes.static_path(@conn, "/js/chatroom.js") %>"></script> 
+<script async type="module" src="<%= Routes.static_path(@conn, "/js/chatroom.js") %>"></script> 
 
-<script>
-</script>
-<script type="module">
-import socket from "<%= Routes.static_path(@conn, "/js/socket.js") %>"
-import Chat from "<%= Routes.static_path(@conn, "/js/chat.js") %>"
-import ChatNotification from "<%= Routes.static_path(@conn, "/js/chatnotification.js") %>"
-import ChatPresence from "<%= Routes.static_path(@conn, "/js/chatpresence.js") %>"
-
-
-Chat.init(socket)
-ChatNotification.init(socket)
-ChatPresence.init(socket)
-window.socket = socket
-</script>
-
+<script src="<%= Routes.static_path(@conn, "/js/dochat.js") %>"> </script>
 
 
 <script src="<%= Routes.static_path(@conn, "/js/linkify.min.js") %>" ></script>
