publish the guide

--- a/lib/pelable_web/templates/layout/app.html.eex
+++ b/lib/pelable_web/templates/layout/app.html.eex
@@ -76,6 +76,7 @@ function myFunction() {
    <a href="/apply">Apply</a>
    <a href="/program"> The Program </a>
   <a href="/chat">Chat</a>
+  <a href="/guide">Guide</a>
   <%= if Pow.Plug.current_user(@conn) do %>
   <% else %>
   <a href="<%= Routes.pow_registration_path(@conn, :new) %>" class="">Sign up</a>
