--- a/lib/pelable_web/templates/pow/registration/edit.html.eex
+++ b/lib/pelable_web/templates/pow/registration/edit.html.eex
@@ -7,17 +7,26 @@
     </div>
   <% end %>
 
+  <%= label f, :username %>
+  <%= text_input f, :username %>
+  <%= error_tag f, :username %>
+  <br>
+
   <%= label f, :current_password %>
   <%= password_input f, :current_password %>
   <%= error_tag f, :current_password %>
+  <br>
 
   <%= label f, Pow.Ecto.Schema.user_id_field(@changeset) %>
   <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset) %>
   <%= error_tag f, Pow.Ecto.Schema.user_id_field(@changeset) %>
 
+  <br>
   <%= label f, :password %>
   <%= password_input f, :password %>
   <%= error_tag f, :password %>
+
+  <br>
 
   <%= label f, :confirm_password %>
   <%= password_input f, :confirm_password %>
