--- a/lib/pelable_web/templates/page/landing.html.eex
+++ b/lib/pelable_web/templates/page/landing.html.eex
@@ -175,7 +175,7 @@ s0.parentNode.insertBefore(s1,s0);
 										<div class="accordion-icon"></div>
 									</div>
 									<div class="accordion-body">
-										<p> October 17th at 11:55 PM, or more precisely in: </p> <p id="deadline"> </p>
+										<p> Yes, after filling out your application and introducing yourself to the community we'll match you with a team  </p>
 									</div>
 								</li>
 
