--- a/lib/pelable_web/templates/layout/app.html.eex
+++ b/lib/pelable_web/templates/layout/app.html.eex
@@ -68,6 +68,21 @@ function get_user_token() {
     }
 </script>
 
+<%= if show_web_push?(@conn) do %>
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  var OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "277bc59b-8037-4702-8a45-66cb485da805",
+      notifyButton: {
+        enable: true,
+      },
+    });
+  });
+</script>
+<% end %>
+
   </head>
   <body>
   
