--- a/lib/pelable_web/templates/pow_reset_password/reset_password/edit.html.eex
+++ b/lib/pelable_web/templates/pow_reset_password/reset_password/edit.html.eex
@@ -16,7 +16,7 @@
   <%= error_tag f, :confirm_password %>
 
   <div>
-    <%= submit "Submit" %>
+    <%= submit "Submit", class: "btn btn-primary btn-lg" %>
   </div>
 <% end %>
 
