--- a/lib/pelable_web/templates/page/landing.html.eex
+++ b/lib/pelable_web/templates/page/landing.html.eex
@@ -71,7 +71,7 @@ s0.parentNode.insertBefore(s1,s0);
 	                        <h1 class="hero-title mt-0 is-revealing">Stuck in tutorial purgatory?</h1>
 	                        <p class="hero-paragraph is-revealing"> Level up your coding skills.</p>
 	                        <p class="hero-cta mb-0 is-revealing">
-								<a class="button button-primary button-shadow" href="/registration/new"> Sign up</a>
+								<a class="button button-primary button-shadow" href="/apply"> Apply</a>
 							</p>
 						</div>
 						<div class="hero-illustration">
@@ -245,7 +245,7 @@ s0.parentNode.insertBefore(s1,s0);
                     
 						<h3 class="section-title mt-0">Join the Community</h3>
 						<div class="cta-cta">
-							<a class="button button-primary button-shadow" href="/registration/new">Join now</a>
+							<a class="button button-primary button-shadow" href="/apply">Apply now</a>
 						</div>
 						
 					</div>
